# psk

./: .gitignore  Inicio.py  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: backup_bucle_send_and_insert.py  dataloader.py  db.py  email_manager.py  llm_manager.py  template_manager.py  validaciones.py  workers.py
backend/db/: stats.db
backend/tests/: test_db.py  test_validaciones.py
